CV-45 bejelentkezés, regisztráció oldal css, html, címsor kész, gombok

--- a/Oldalak/Bejelentkezés/Regisztráció/index.html
+++ b/Oldalak/Bejelentkezés/Regisztráció/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chathub-VIP</title>
+    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="cimDIV">
@@ -12,8 +14,8 @@
     </div>
     <div id="gombDIV">
         <!--bejelentkezes/regisztracio-->
-        <button id="bejelButton">Bejelentkezés</button>
-        <button id="regiszButton">Regisztráció</button>
+        <div id="gomb1"><button class="gomb" id="bejelButton">Bejelentkezés</button></div>
+        <div id="gomb2"><button class="gomb" id="regiszButton">Regisztráció</button></div>
     </div>
     <div id="lablecDIV">
         <!--lablec-->
